로그인 화면 추가

--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,9 @@
       <h1>develop 브랜치에다가 추가하는 본문 내용</h1>
 
       <div id="container"></div>
-        <a href="index.html"></a><p><a href="index-2.html">기숙사 정보</a></p>
+        <p><a href="index-2.html" target="_blank">기숙사 정보</a></p>
+
+      <div><a href="form.html">로그인 화면</a></div>  
     </body>
     
 </html>
