폴더 이름 변경, 로그인 화면 html 파일 수정

--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,7 @@
       <div id="container"></div>
         <p><a href="index-2.html" target="_blank">기숙사 정보</a></p>
 
-      <div><a href="form.html">로그인 화면</a></div>  
+      <div><a href="login.html" target="_blank">로그인 화면</a></div>  
     </body>
     
 </html>
