css파일 생성 및 html 문서 링크

--- a/main/index.html
+++ b/main/index.html
@@ -5,15 +5,17 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>기숙사 추천 플랫폼</title>
+      <link href="/CSS/test.css" rel="stylesheet">
     </head>
 
     <body>
-      <h1>develop 브랜치에다가 추가하는 본문 내용</h1>
+      <h1>기숙사이트</h1>
       
       <hr>
       
-      <div id="container"></div>
+      <div id="container">
         <p><a href="index-2.html" target="_blank">기숙사 정보</a></p>
+      </div>
 
       <div><a href="login.html" target="_blank">로그인 화면</a></div>  
     </body>
