Test: 이미지 폴더 추가
- html 테스트에 필요한 이미지 폴더와 파일을 추가

--- a/_test/image.html
+++ b/_test/image.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>Avoid It!</h1>
-  <img src="../_Images/avoid-it.jpg" alt="게임화면" width="300px" height="400px">
+  <img src="../_images/avoid-it.jpg" alt="게임화면" width="300px" height="400px">
   <p>이 사진은 제가 1학년 1학기에 컴퓨터과학과코딩이라는 과목에서 조별과제로 만든 게임입니다.</p>
 </body>
 
