Test: 서버 요청, 응답 테스트

--- a/fs_test.html
+++ b/fs_test.html
@@ -4,18 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>파일 시스템 서버 테스트</title>
 </head>
 
 <body>
-<p>스크립트 전</p>
+  <h1>Node.js로 서버 만들기</h1>
+  <p>3장 http 모듈 공부 중입니다.</p>
 
-
-  <script type="text">
-    alert('이것이 alert 함수입니다.');
-  </script>
-
-<p>스크립트 후</p>
 </body>
 
 </html>
