이미지 삽입 테스트 =

--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JBNU 기숙사이트</title>
-  <link rel="stylesheet" href="/CSS/index.css">
+  <link rel="stylesheet" href="./_css/index.css">
 </head>
 
 <body>
   <header>
-    <h1>전북대학교 기숙사이트</h1>
+    <h1 style="color: red">전북대학교 기숙사이트</h1>
   </header>
 
   <hr>
 
   <nav>
-    <ul>
-      <li><a href="./main/dorm-fr-rec.html" target="_blank">신입생 환산점수 확인하기</a></li>
-      <li><a href="./main/dorm-es-rec.html" target="_blank">재학생 환산점수 확인하기</a></li>
-      <li><a href="./main/login.html" target="_blank">로그인 화면</a></li>
-      <li><a href="./main/dorm-info.html" target="blank">기숙사 정보</a></li>
+    <ul class="sidebar-toggle">
+      <li><a href="./_html/dorm-fr-rec.html" target="_blank">신입생 환산점수 확인하기</a></li>
+      <li><a href="./_html/dorm-es-rec.html" target="_blank">재학생 환산점수 확인하기</a></li>
+      <li><a href="./_html/login.html" target="_blank">로그인 화면</a></li>
+      <li><a href="./_html/dorm-info.html" target="blank">기숙사 정보</a></li>
+      <li><a href="./_html/hanbit-cutline.html" target="blank">2023학년도 1학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
+      <li><a href="./_html/chambit-cutline.html" target="blank">2023학년도 2학기 참빛관 커트라인 보기</a></li>
     </ul>
   </nav>
 
   <main>
-    Content 영역
+  <span class="dorm-cutline"><h2>2023학년도 2학기 기숙사 별 커트라인 순위</h2></span>
   </main>
 
   <footer>
-    footer영역
   </footer>
 
 </body>
