여러가지 기숙사 정보 추가

--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
       <li><a href="./_html/dorm-es-rec.html" target="_blank">재학생 환산점수 확인하기</a></li>
       <li><a href="./_html/login.html" target="_blank">로그인 화면</a></li>
       <li><a href="./_html/dorm-info.html" target="blank">기숙사 정보</a></li>
-      <li><a href="./_html/hanbit-cutline.html" target="blank">2023학년도 1학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
-      <li><a href="./_html/chambit-cutline.html" target="blank">2023학년도 2학기 참빛관 커트라인 보기</a></li>
+      <li><a href="./_html/cutline/23-2-B-type-cutline.html" target="blank">2023학년도 2학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
+      <li><a href="./_html/cutline/23-1-B-type-cutline.html" target="blank">2023학년도 1학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
+      <li><a href="./_html/cutline/23-2-A-type-cutline.html" target="blank">2023학년도 2학기 참빛관 커트라인 보기</a></li>
+      <li><a href="./_html/cutline/23-1-A-type-cutline.html" target="blank">2023학년도 1학기 참빛관 커트라인 보기</a></li>
+      
+
     </ul>
   </nav>
 
   <main>
-  <span class="dorm-cutline"><h2>2023학년도 2학기 기숙사 별 커트라인 순위</h2></span>
+  <span class="dorm-cutline"><h2>2023학년도 2학기 기숙사 별 커트라인</h2></span>
   </main>
 
   <footer>
