--- a/_html/cutline/23-1-B-type-cutline.html
+++ b/_html/cutline/23-1-B-type-cutline.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2023-1 한빛/새빛/대동/평화 점수 커트라인</title>
+  <title>2023-1학기 참빛관 커트라인</title>
   <link rel="stylesheet" href="./_css/index.css">
 </head>
 
