--- a/_test/tabel.html
+++ b/_test/tabel.html
@@ -6,29 +6,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>표 만들기 테스트</title>
   <style>
-    table {
+    #member-schedule {
       border: 1px solid #ccc;
       border-collapse: collapse;
+      width: 50%;
+    
     }
 
-    td,
-    th {
+    #member-schedule tr:hover{
+      background-color: #eef8d5;
+    }
+
+    td, th {
       border: 1px solid #ccc;
       padding: 10px;
     }
+
+    th{
+      padding-top: 12px;
+      text-align: center;
+      background-color: rgb(181, 215, 238);
+    }
+
+
   </style>
 </head>
 
 <body>
-  <table>
+  <table id="member-schedule">
     <caption>개발새발 팀원들 일정표</caption> <!--제목-->
     <tr>
-      <th>이름</th>
+      <th>구분</th>
       <th>1/23</th>
       <th>1/24</th>
       <th>1/25</th>
       <th>1/26</th>
-      <th>1/27</th>
+      <th>1/28</th>
+      <th>1/29</th>
+      <th>1/30</th>
+      <th>1/31</th>
+
+      <th>2/1</th>
+      <th>2/2</th>
+      <th>2/3</th>
+      <th>2/4</th>
+      <th>2/5</th>
+
     </tr>
 
     <tr>
@@ -38,11 +61,29 @@
       <td>N</td>
       <td>N</td>
       <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
     </tr>
 
     <tr>
       <td>PSE</td>
       <td>N</td>
+      <td>N</td>
+      <td>N</td>
+      <td>N</td>
+      <td>N</td>
+      <td>N</td>
+      <td>N</td>
+      <td>N</td>
+      <td>N</td>
+
       <td>N</td>
       <td>N</td>
       <td>N</td>
@@ -55,6 +96,15 @@
       <td>Y</td>
       <td>N</td>
       <td>N</td>
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
+
+      <td>Y</td>
+      <td>Y</td>
+      <td>Y</td>
       <td>Y</td>
     </tr>
 
