기숙사 정보 HTML 정보 대충 추가, 창의관 커트라인 정보 추가

--- a/_html/dorm-es-rec.html
+++ b/_html/dorm-es-rec.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>재학생 기숙사이트</title>
+  <title>재학생 환산점수 계산</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
           <option value="humanities">인문대학</option>
           <option value="naturalSciences">자연과학대학</option>
         </select>
-        <label for="gradeInput">학점 : <input type="number" id="gradeInput"> </label>
+        <label for="gradeInput">학점 : <input type="number" id="gradeInput" step="0.01"> </label>
         <input type="submit" value="계산!">
   </main>
   <br>
