--- a/_html/dorm-fr-rec.html
+++ b/_html/dorm-fr-rec.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>신입생 정보</title>
+  <title>신입생 환산점수 계산</title>
 </head>
 
 <body>
