--- a/_html/dorm-info.html
+++ b/_html/dorm-info.html
@@ -9,7 +9,15 @@
 
 <body>
   <header><h1>여기는 기숙사 정보 탭 입니다.</h1></header>
-
+  <hr>
+  <main>
+    <h2>참빛관: 시설 ㄱㅊ, 밥 ㅈㄴ 맛없음<br></h2>
+    <h2>창의관: 시설은 좋은데 벌레 많이 나옴, 밥 안 줌<br></h2>
+    <h2>한빛관: 시설도 좋고 밥도 개꿀맛<br></h2>
+    <h2>새빛관: 시설 낫배드 밥 개꿀맛<br></h2>
+    <h2>대동관: 시설 구림, 밥 개꿀맛 + 상남자들의 공간<br></h2>
+    <h2> 평화관: 시설 구림, 밥 개꿀맛<br></h2>
+  </main>
 
 </body>
 
