깃허브 페이지 웹 호스팅 404를 막기위한 발악1

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li><a href="./_html/login.html" target="_blank">로그인 화면</a></li>
       <li><a href="./_html/dorm-info.html" target="blank">기숙사 정보</a></li>
       <br>
-      <li><a href="./_html/cutline/23-2-B-type-cutline.html" target="blank">2023학년도 2학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
+      <li><a href="https://lgwqwer.github.io/dormitory-web-service/_html/cutline/23-2-B-type-cutline.html" target="blank">2023학년도 2학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
       <li><a href="./_html/cutline/23-1-B-type-cutline.html" target="blank">2023학년도 1학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
       <br>
       <li><a href="./_html/cutline/23-2-D-type-cutline.html" target="blank">2023학년도 2학기 창의관 커트라인 보기</a></li>
