헤더 부분 소소하게 꾸며봄

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
+  <header class="">
+
+  </header>
   <header>
-    <h1 style="color: red">전북대학교 기숙사이트</h1>
+    <h1 class="index-title">전북대학교 기숙사이트</h1>
   </header>
 
   <hr>
@@ -30,12 +33,10 @@
       <br>
       <li><a href="./_html/cutline/23-2-A-type-cutline.html" target="blank">2023학년도 2학기 참빛관 커트라인 보기</a></li>
       <li><a href="./_html/cutline/23-1-A-type-cutline.html" target="blank">2023학년도 1학기 참빛관 커트라인 보기</a></li>
-      
-
     </ul>
   </nav>
 
-  <main>
+  <main >
   <span class="dorm-cutline"><h2>2023학년도 기숙사 별 커트라인</h2></span>
   </main>
 
