--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JBNU 기숙사이트</title>
-  <link rel="stylesheet" href="./_css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -20,19 +20,19 @@
 
   <nav>
     <ul class="sidebar-toggle">
-      <li><a href="./_html/dorm-fr-rec.html" target="_blank">신입생 환산점수 확인하기</a></li>
-      <li><a href="./_html/dorm-es-rec.html" target="_blank">재학생 환산점수 확인하기</a></li>
-      <li><a href="./_html/login.html" target="_blank">로그인 화면</a></li>
-      <li><a href="./_html/dorm-info.html" target="blank">기숙사 정보</a></li>
+      <li><a href="./html/dorm-fr-rec.html" target="_blank">신입생 환산점수 확인하기</a></li>
+      <li><a href="./html/dorm-es-rec.html" target="_blank">재학생 환산점수 확인하기</a></li>
+      <li><a href="./html/login.html" target="_blank">로그인 화면</a></li>
+      <li><a href="./html/dorm-info.html" target="blank">기숙사 정보</a></li>
       <br>
-      <li><a href="./_html/cutline/23-2-B-type-cutline.html" target="blank">2023학년도 2학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
-      <li><a href="./_html/cutline/23-1-B-type-cutline.html" target="blank">2023학년도 1학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
+      <li><a href="./html/cutline/23-2-B-type-cutline.html" target="blank">2023학년도 2학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
+      <li><a href="./html/cutline/23-1-B-type-cutline.html" target="blank">2023학년도 1학기 한빛/새빛/대동/평화 커트라인 보기</a></li>
       <br>
-      <li><a href="./_html/cutline/23-2-D-type-cutline.html" target="blank">2023학년도 2학기 창의관 커트라인 보기</a></li>
-      <li><a href="./_html/cutline/23-1-D-type-cutline.html" target="blank">2023학년도 1학기 창의관 커트라인 보기</a></li>
+      <li><a href="./html/cutline/23-2-D-type-cutline.html" target="blank">2023학년도 2학기 창의관 커트라인 보기</a></li>
+      <li><a href="./html/cutline/23-1-D-type-cutline.html" target="blank">2023학년도 1학기 창의관 커트라인 보기</a></li>
       <br>
-      <li><a href="./_html/cutline/23-2-A-type-cutline.html" target="blank">2023학년도 2학기 참빛관 커트라인 보기</a></li>
-      <li><a href="./_html/cutline/23-1-A-type-cutline.html" target="blank">2023학년도 1학기 참빛관 커트라인 보기</a></li>
+      <li><a href="./html/cutline/23-2-A-type-cutline.html" target="blank">2023학년도 2학기 참빛관 커트라인 보기</a></li>
+      <li><a href="./html/cutline/23-1-A-type-cutline.html" target="blank">2023학년도 1학기 참빛관 커트라인 보기</a></li>
     </ul>
   </nav>
 
