네비게이션 바 요소 추가

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>JBNU 기숙사이트</title>
+  
   <link rel="stylesheet" href="./css/index.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -21,16 +23,16 @@
         <h1>기숙사 정보</h1>
       </a>
       <a href="#">
-        <h1>기숙사 아무거나</h1>
+        <h1>기숙사 약도</h1>
       </a>
       <a href="#">
-        <h1>기숙사 개쩔어</h1>
+        <h1>기숙사 모의지원</h1>
       </a>
       <a href="#">
-        <h1>기숙사 밥 노맛</h1>
+        <h1>기숙사 평점</h1>
       </a>
       <a href="#">
-        <h1>기숙사 룸메 최고</h1>
+        <h1>기숙사 룸메 구하기</h1>
       </a>
     </nav>
   </header>
