학점 입력 요소 name 추가

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <option value="naturalSciences">자연과학대학</option>
             </select>
             <!-- 학점 입력 -->
-            <input type="number" id="gradeInput" step="0.01" placeholder="학점 입력" max="4.5" min="0" width="100">
+            <input type="number" name="grade" step="0.01" placeholder="학점 입력" max="4.5" min="0">
             </label>
             <i class='bx bxs-graduation'></i>
           </div>
