--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
 
     <!-- 사이드바  -->
     <div class="main-sidebar">
+      <h1>2024년 1학기</h1>
+      <ul>
+        <li><a href="./html/cutline/24-1-B-type-cutline.html" target="blank">한빛/새빛/대동/평화 커트라인 보기</a></li>
+        <br>
+        <li><a href="./html/cutline/24-1-D-type-cutline.html" target="blank">창의관 커트라인 보기</a></li>
+        <br>
+        <li><a href="./html/cutline/24-1-A-type-cutline.html" target="blank">참빛관 커트라인 보기</a></li>
+      </ul>
+
+      <hr>
+
       <h1>2023년 2학기</h1>
       <ul>
         <li><a href="./html/cutline/23-2-B-type-cutline.html" target="blank">한빛/새빛/대동/평화 커트라인 보기</a></li>
