하이퍼링크 연결

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <ul class="navbar_menu">
-      <li><a href="#">기숙사 정보</a></li>
+      <li><a href="./html/dorm-info.html" target="_blank">기숙사 정보</a></li>
       <li><a href="#">기숙사 약도</a></li>
       <li><a href="#">기숙사 모의 지원</a></li>
       <li><a href="#">기숙사 평점</a></li>
