--- a/index/index.html
+++ b/index/index.html
@@ -4,14 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>전북대 기숙사이트</title>
-  <link rel="stylesheet" href="./css/index.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/dorm-rec.css">
+  <link rel="stylesheet" href="./css/short-cuts.css">
+
   <script src="./js/index.js" defer></script>
   <script src="https://kit.fontawesome.com/4ec59cdc0a.js" crossorigin="anonymous"></script>
 
+  <title>전북대 기숙사이트</title>
+  
 </head>
 
 <body>
@@ -53,7 +60,7 @@
     </div>
 
     <div class="conversion_info">
-      <form action="" name="conversion-form" method="get">
+      <form action="" name="conversion-form" method="GET">
         <select>
 
         </select>
