환산점수 계산 부분 심폐소생

--- a/index/index.html
+++ b/index/index.html
@@ -66,7 +66,7 @@
       <form action="" method="GET">
         <div class="input__box">
           <!-- 단과대학 선택  -->
-          <select name="collage" id="collages" style="width: 20%; font-family: ChosunGs;">
+          <select name="collage" id="collages" style="width: 70%;">
             <option value="engineering">공과대학</option>
             <option value="agriculture">농업생명대학</option>
             <option value="education">사범대학</option>
@@ -121,11 +121,11 @@
           class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
 
-    <div class="add_dorm_input">
+    <!-- <div class="add_dorm_input">
       <li>혜민관 홈페이지 바로가기</li>
       <a href="https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C4000" target="_blank"><i
           class="fa-solid fa-circle-arrow-right"></i></a>
-    </div>
+    </div> -->
   </div>
 
 
