기숙사 추천기 타이틀 블록 '무료로' 문구 추가

--- a/index/index.html
+++ b/index/index.html
@@ -58,7 +58,7 @@
     <div class="dorm__rec__title">
       <h1>&nbsp;&nbsp;기숙사 추천기</h1>
 
-      <p>이 블록은 최소한의 정보만을 입력받아, 기숙사 환산 점수를 변환하고, 기숙사를 추천해줍니다.</p>
+      <p>이 블록은 '무료로' 최소한의 정보만을 입력받아, 기숙사 환산 점수를 변환하고, 기숙사를 추천해줍니다.</p>
     </div>
 
     <div class="dorm__rec__input">
