--- a/index.html
+++ b/index.html
@@ -53,19 +53,18 @@
     </div>
 
     <div>
-      <form action="" name="conversion-form" method="post">
-        <select>
-          
-
-        </select>
-        <input type="number" name="grade" placeholder="학점을 입력하세요." step="0.01">
-        <input type="number" name="dist-score" placeholder="거리 점수를 입력하세요." step="0.05">
+      <form action="result.jsp" name="conversion-form" method="post">
+        <!--<select></select>-->
+        <input type="number" max="4.50" name="grade" placeholder="학점을 입력하세요." step="0.01">
+        <input type="number" max="10.00" name="dist-score" placeholder="거리 점수를 입력하세요." step="0.05">
+        <button type="submit">추천 받기!</button>
       </form>
     </div>
 
-    <div>
+    <!-- 버튼을 form 안에 넣어야 한대서 이거 주석처리함
+      <div>ㄴ
       <button>추천 받기!</button>
-    </div>
+    </div>-->
     
   </div>
   
