다시 대격변

--- a/index/index.html
+++ b/index/index.html
@@ -1,49 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>전북대 기숙사이트</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <link rel="pdorm_reconnect" href="https://fonts.googleapis.com">
   <link rel="pdorm_reconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@200&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/dorm-rec.css">
-  <link rel="stylesheet" href="./css/short-cuts.css">
-
-  <script src="./js/index.js" defer></script>
   <script src="https://kit.fontawesome.com/4ec59cdc0a.js" crossorigin="anonymous"></script>
 
-  <title>전북대 기숙사이트</title>
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/index.css">
 
 </head>
 
 <body>
 
-  <header>
-    <nav class="navbar">
-
+  <header class="container-fluid p-0">
+    <nav class="navbar top justify-content-between align-items-center p-3 w-100">
       <div class="navbar_logo">
         <i class="fa-solid fa-school"></i>
         <a href="index.html">전북대 기숙사이트</a>
       </div>
 
-      <ul class="navbar_menu">
-        <li><a href="../html/dorm-info.html" target="_blank">기숙사 정보</a></li>
+      <ul class="navbar_menu mb-0">
+        <li><a href="#" target="_blank">기숙사 정보</a></li>
         <li><a href="#">기숙사 약도</a></li>
         <li><a href="#">기숙사 모의 지원</a></li>
         <li><a href="#">기숙사 평점</a></li>
         <li><a href="#">룸메 구인</a></li>
       </ul>
 
-      <ul class="navbar_icons">
-        <!-- <li><i class="fa-regular fa-moon"></i></li> -->
+      <ul class="navbar_icons mb-0">
         <li><i class="fa-solid fa-sun"></i></li>
         <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-
       </ul>
 
       <a href="#" class="navbar_toggleBtn">
@@ -52,83 +49,341 @@
     </nav>
   </header>
 
+  <main>
 
-  <div class="dorm__rec">
+    <div class="container mb-5 p-5">
+      <h1>기숙사 환산점수 계산</h1>
+      <form active="" method="get">
 
-    <div class="dorm__rec__title">
-      <h1>&nbsp;&nbsp;기숙사 추천기</h1>
+        <table class="table table-hover">
+          <colgroup>
+            <col width=15%>
+            <col width=7%>
+            <col width=7%>
+            <col width=7%>
+            <col width=20%>
+            <col width=20%>
+            <col width=10%>
+            <col width=10%>
+          </colgroup>
 
-      <p>이 블록은 '무료로' 최소한의 정보만을 입력받아, 기숙사 환산 점수를 변환하고, 기숙사를 추천해줍니다.</p>
+          <thead>
+            <tr>
+              <th scope="col">단과대학</th>
+              <th scope="col">학점</th>
+              <th scope="col">상점</th>
+              <th scope="col">벌점</th>
+              <th scope="col">시/도</th>
+              <th scope="col">시/군/구</th>
+              <th scope="col">거리점수</th>
+              <th scope="col">환산점수</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">
+                <select class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100" name="collage" id="collages"
+                  aria-label="Default select example">
+                  <option selected>단과대학</option>
+                  <option value="engineering">공과대학</option>
+                  <option value="agriculture">농업생명대학</option>
+                  <option value="education">사범대학</option>
+                  <option value="commerce">상과대학</option>
+                  <option value="humanEcology">생활과학대학</option>
+                  <option value="arts">예술대학</option>
+                  <option value="humanities">인문대학</option>
+                  <option value="naturalSciences">자연과학대학</option>
+                </select>
+              </th>
+              <td><div class="form-floating h-25 w-100">
+                <input type="number" class="form-control" id="floatingInput" placeholder="학점">
+                <label for="floatingInput"></label>
+              </div></td>
+              <td>0</td>
+              <td>0</td>
+              <td>
+                <select name="province" id="provinces" class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100"
+                  aria-label="Default select example">
+                  <option selected>시/도</option>
+                  <option value="Gangwon-do">강원특별자치도</option>
+                  <option value="Gyeonggi-do">경기도</option>
+                  <option value="Gyeonsangnam-do">경상남도</option>
+                  <option value="Gyeonsangbuk-do">경상북도</option>
+                  <option value="Gwangju">광주광역시</option>
+                  <option value="Daegu">대구광역시</option>
+                  <option value="Daegeon">대전광역시</option>
+                  <option value="Sejong">세종특별자치시</option>
+                  <option value="Jeollabuk-do">전북특별자치도</option>
+                  <option value="hh">아오 귀찮아</option>
+                </select>
+              </td>
+              <td><select class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100" aria-label="Default select example">
+                  <option selected>시/군/구</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select></td>
+              <td>5.00</td>
+              <td>85.00</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                <select class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100" name="collage" id="collages"
+                  aria-label="Default select example">
+                  <option selected>단과대학</option>
+                  <option value="engineering">공과대학</option>
+                  <option value="agriculture">농업생명대학</option>
+                  <option value="education">사범대학</option>
+                  <option value="commerce">상과대학</option>
+                  <option value="humanEcology">생활과학대학</option>
+                  <option value="arts">예술대학</option>
+                  <option value="humanities">인문대학</option>
+                  <option value="naturalSciences">자연과학대학</option>
+                </select>
+              </th>
+              <td>4.24</td>
+              <td>0</td>
+              <td>0</td>
+              <td>
+                <select name="province" id="provinces" class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100"
+                  aria-label="Default select example">
+                  <option selected>시/도</option>
+                  <option value="Gangwon-do">강원특별자치도</option>
+                  <option value="Gyeonggi-do">경기도</option>
+                  <option value="Gyeonsangnam-do">경상남도</option>
+                  <option value="Gyeonsangbuk-do">경상북도</option>
+                  <option value="Gwangju">광주광역시</option>
+                  <option value="Daegu">대구광역시</option>
+                  <option value="Daegeon">대전광역시</option>
+                  <option value="Sejong">세종특별자치시</option>
+                  <option value="Jeollabuk-do">전북특별자치도</option>
+                  <option value="hh">아오 귀찮아</option>
+                </select>
+              </td>
+              <td>
+                <select class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100" aria-label="Default select example">
+                  <option selected>시/군/구</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+              </td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+            <tr>
+              <th scope="row">
+                <select class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100" name="collage" id="collages"
+                  aria-label="Default select example">
+                  <option selected>단과대학</option>
+                  <option value="engineering">공과대학</option>
+                  <option value="agriculture">농업생명대학</option>
+                  <option value="education">사범대학</option>
+                  <option value="commerce">상과대학</option>
+                  <option value="humanEcology">생활과학대학</option>
+                  <option value="arts">예술대학</option>
+                  <option value="humanities">인문대학</option>
+                  <option value="naturalSciences">자연과학대학</option>
+                </select>
+              </th>
+              <td>3.8</td>
+              <td>0</td>
+              <td>0</td>
+              <td>
+                <select name="province" id="provinces" class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100"
+                  aria-label="Default select example">
+                  <option selected>시/도</option>
+                  <option value="Gangwon-do">강원특별자치도</option>
+                  <option value="Gyeonggi-do">경기도</option>
+                  <option value="Gyeonsangnam-do">경상남도</option>
+                  <option value="Gyeonsangbuk-do">경상북도</option>
+                  <option value="Gwangju">광주광역시</option>
+                  <option value="Daegu">대구광역시</option>
+                  <option value="Daegeon">대전광역시</option>
+                  <option value="Sejong">세종특별자치시</option>
+                  <option value="Jeollabuk-do">전북특별자치도</option>
+                  <option value="hh">아오 귀찮아</option>
+                </select>
+              </td>
+              <td>
+                <select class="form-select col-xxl-3 col-xl-4 col-lg-6 w-100" aria-label="Default select example">
+                  <option selected>시/군/구</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+              </td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    <div class="container row">
+      <div class="form-check col-xxl-3 col-xl-4 col-lg-6">
+        <input class="form-check-input" type="checkbox" name="gender" value="m" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          남성
+        </label>
+      </div>
+      <div class="form-check col-xxl-3 col-xl-4 col-lg-6">
+        <input class="form-check-input" type="checkbox" name="gender" value="w" id="flexCheckChecked">
+        <label class="form-check-label" for="flexCheckChecked">
+          여성
+        </label>
+      </div>
+    </div>
+    
+    
+
+    <button class="btn btn-dark rounded-pill px-3" type="submit">계산하기!</button>
+    </form>
+
+
     </div>
 
-    <div class="dorm__rec__input">
-      <h1 class="dorm__rec__input__title">환산점수 계산</h1>
-      <form action="" method="GET">
-        <div class="input__box">
-          <!-- 단과대학 선택  -->
-          <select name="collage" id="collages" style="width: 70%;">
-            <option value="engineering">공과대학</option>
-            <option value="agriculture">농업생명대학</option>
-            <option value="education">사범대학</option>
-            <option value="commerce">상과대학</option>
-            <option value="humanEcology">생활과학대학</option>
-            <option value="arts">예술대학</option>
-            <option value="humanities">인문대학</option>
-            <option value="naturalSciences">자연과학대학</option>
-          </select>
+    <hr>
+
+    </div>
+
+
+    <div class="container">
+      <div class="row justify-content-center g-4 px-2 gap-4">
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/참빛관.png" class="card-img-top" alt="참빛관 사진">
+          <div class="card-body">
+            <h5 class="card-title">참빛관</h5>
+            <p class="card-text">시설 좋은 편, 밥 개노맛</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C3000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
         </div>
 
-        <div class="input__box">
-          <input type="number" name="grade" placeholder="학점을 입력하세요." step="0.01">
-          <input type="number" name="dist-score" placeholder="거리 점수를 입력하세요." step="0.05">
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/대동관.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">대동관</h5>
+            <p class="card-text">시설 구림, 밥 개꿀맛</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C2000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
         </div>
 
-        <div class="dorm__rec__input__btn">
-          <input type="submit" value="변환!">    
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/평화관.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">평화관</h5>
+            <p class="card-text">시설 구림</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C2000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
         </div>
-      </form>
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/새빛관.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">새빛관</h5>
+            <p class="card-text">시설 좋은 편, 밥 개꿀맛</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C5000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
+        </div>
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/한빛관.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">한빛관</h5>
+            <p class="card-text">시설 좋음, 밥 개꿀맛</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C6000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
+        </div>
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/창의관.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">창의관</h5>
+            <p class="card-text">시설 좋음, 밥 안줌</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C9000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
+        </div>
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/혜민관.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">혜민관</h5>
+            <p class="card-text">ㅎㅎㅎ</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C4000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
+        </div>
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/특성화캠퍼스.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">웅비관</h5>
+            <p class="card-text">익산 캠퍼스!</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C7000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
+        </div>
+
+        <div class="card col-xxl-3 col-lg-4 col-md-6 col-sm-12 p-0" style="width: 18rem;">
+          <img src="../images/특성화캠퍼스.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">청운관</h5>
+            <p class="card-text">익산 캠퍼스!</p>
+            <button class="btn btn-dark rounded-pill px-3" type="button"
+              onclick="window.open('https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C8000', '_blank')">홈페이지 ㄱ
+              ㄱ</button>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="dorm__rec__btn">
-      <button type="submit">추천 받기!</button>
-    </div>
-
-  </div>
 
 
-  <div class="dorm_shortcuts">
-    <div>
-      <li>참빛관 홈페이지 바로가기</li>
-      <a href="https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C3000" target="_blank"><i
-          class="fa-solid fa-circle-arrow-right"></i></a>
-    </div>
 
-    <div>
-      <li>한빛관 홈페이지 바로가기</li>
-      <a href="https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C6000" target="_blank"><i
-          class="fa-solid fa-circle-arrow-right"></i></a>
-    </div>
-
-    <div>
-      <li>새빛관 홈페이지 바로가기</li>
-      <a href="https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C5000" target="_blank"><i
-          class="fa-solid fa-circle-arrow-right"></i></a>
-    </div>
-
-    <div>
-      <li>창의관 홈페이지 바로가기</li>
-      <a href="https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C9000" target="_blank"><i
-          class="fa-solid fa-circle-arrow-right"></i></a>
-    </div>
-
-    <!-- <div class="add_dorm_input">
-      <li>혜민관 홈페이지 바로가기</li>
-      <a href="https://likehome.jbnu.ac.kr/home/main/inner.php?sMenu=C4000" target="_blank"><i
-          class="fa-solid fa-circle-arrow-right"></i></a>
-    </div> -->
-  </div>
+  </main>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <footer class="py-4 my-3 bg-dark bottom mb-0">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-secondary">About</a></li>
+    </ul>
+    <p class="text-center text-secondary">© 2024 Company, Inc</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
